# mass-image-processing

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  LICENSE  README.md  main.cpp
includes/: BufferedIO.h  ColorChangeOperation.h  GaussianBlurOperation.h  Image.h  ImageOperation.h  ParallelProcess.h  SequentialProcess.h
src/: BufferedIO.cpp  Image.cpp  ParallelProcess.cpp  SequentialProcess.cpp  main.cpp
